--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
       <h2 class="section-title">Peek Into Our Day</h2>
       <div class="gallery" aria-label="School gallery">
         <img src="assets/Hall.jpg" alt="Hall"/>
+        <img src="assets/Student.jpg" alt="Student"/>
         <img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b?q=80&w=1200&auto=format&fit=crop" alt="Classroom"/>
         <img src="https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?q=80&w=1200&auto=format&fit=crop" alt="Learning corner"/>
         <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?q=80&w=1200&auto=format&fit=crop" alt="Art time"/>
@@ -367,7 +368,6 @@
         <img src="https://images.unsplash.com/photo-1600607687920-4ce8c559d8df?q=80&w=1200&auto=format&fit=crop" alt="Blocks"/>
         <img src="https://images.unsplash.com/photo-1543364195-bfe6e4932397?q=80&w=1200&auto=format&fit=crop" alt="Piano"/>
         <img src="https://images.unsplash.com/photo-1504714146340-959ca07b7bbf?q=80&w=1200&auto=format&fit=crop" alt="Teamwork"/>
-        <img src="https://drive.google.com/drive/folders/1NO0oTe2zUjbVXkbDZcbla3zb_RQ-_0Zz" alt="Outdoor"/>
       </div>
     </div>
   </section>
