--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
       </div>
       <div class="art">
-        <img class="card" src="assets/brightbear-hero.png" alt="Bright Bear Preschool mascot" />
+        <img class="card" src="assets/Intake.jpg" alt="Intake" />
         <div class="shape" aria-hidden="true"></div>
       </div>
     </div>
