--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
     <div class="container">
       <h2 class="section-title">Parents Say…</h2>
       <div class="testis">
-        <div class="quote"><p>“My daughter loves piano time and her reading has improved a lot!”</p><div class="author">— A. Lim</div></div>
-        <div class="quote"><p>“Caring teachers and clear updates every day. We feel very assured.”</p><div class="author">— N. Wong</div></div>
-        <div class="quote"><p>“Great value with strong academics — ready for Primary 1.”</p><div class="author">— S. Tan</div></div>
+        <div class="quote"><p>“We are so thankful to have found this preschool. The teachers are warm, patient, and genuinely care for each child, creating a safe and nurturing environment”</p><div class="author">— L. Wong</div></div>
+        <div class="quote"><p>“We’ve had a wonderful experience with Bright Bear Preschool. The teachers are warm, caring, and attentive to each child’s needs”</p><div class="author">— J. Sew </div></div>
+        <div class="quote"><p>“Bright Bear Preschool has provided both of our children with a safe, supportive, and inspiring place to learn and grow. We are very happy with our choice and would highly recommend the school to other parents”</p><div class="author">— A. Aris</div></div>
       </div>
     </div>
   </section>
