--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@
           <li>Teacher:child ratio that ensures attention</li>
           <li>Daily parent updates (meals, naps, photos)</li>
           <li>Qualified educators trained in phonics & early numeracy</li>
-          <li>Affordable fees — no franchise royalty overheads</li>
+          <li>Affordable fees </li>
         </ul>
       </div>
       <div class="card">
         <h3 style="margin:0 0 8px">School Hours</h3>
-        <p style="margin:0 0 12px">Mon–Fri • 7:30am – 6:30pm</p>
+        <p style="margin:0 0 12px">Mon–Fri • 8:00am – 6:00pm</p>
         <h3 style="margin:10px 0 8px">Locations</h3>
         <p style="margin:0">Kuala Lumpur • Setapak</p>
         <div style="height:12px"></div>
