--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed; /* ✅ Parallax effect */
   color: white;
-  min-height: 100vh;
+  min-height: 700vh;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -131,11 +131,9 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: linear-gradient(
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)
-  );
+  background: rgba(255, 255, 255, 0.3); /* Adjust brightness */
   z-index: 0;
+}
 }
 
 .hero .wrap {
