--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed; /* ✅ Parallax effect */
+  background-attachment: fixed; /* Parallax effect */
   color: white;
-  min-height: 700vh;
+  min-height: 90vh; /* Full viewport height */
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -131,9 +131,10 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(255, 255, 255, 0.3); /* Adjust brightness */
+  background: rgba(255, 255, 255, 0.4); /* Light overlay = brighter image */
   z-index: 0;
 }
+
 }
 
 .hero .wrap {
