--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   justify-content: flex-start;
   overflow: hidden;
   padding: 0 5%;
-  filter: brightness(1.15) saturate(1.1);
+  filter: saturate(1.1);
 }
 
 /* Soft warm overlay */
