--- a/index.html
+++ b/index.html
@@ -110,41 +110,85 @@
 
     /* Hero */
 /* ===== HERO SECTION WITH WARM, BRIGHT BACKGROUND ===== */
+/* ===== HERO SECTION WITH WARM, BRIGHT BACKGROUND ===== */
 .hero {
   position: relative;
-  background: url('assets/Intake.jpg') center/cover no-repeat;
-  color: #1a1a1a; /* dark text for contrast */
-  text-align: center;
-  padding: 100px 20px;
-  min-height: 100vh;
+  isolation: isolate;
+  background-image: url('assets/Intake.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  min-height: 90vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  overflow: hidden;
+  padding: 0 5%;
+  filter: brightness(1.15) saturate(1.1);
 }
 
-/* Remove the faded white overlay */
+/* Soft warm overlay */
 .hero::before {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(255, 255, 255, 0.1); /* slight brightness only */
-  z-index: 1;
+  background: linear-gradient(
+    rgba(255, 230, 200, 0.25),
+    rgba(255, 240, 220, 0.25)
+  );
+  z-index: 0;
 }
 
-/* Ensure hero text stays above background */
-.hero * {
+/* Ensure hero text stays above overlay */
+.hero-content {
   position: relative;
-  z-index: 2;
+  z-index: 1;
+  max-width: 600px;
 }
 
-/* MOBILE VIEW */
+/* Hero heading styles */
+.hero-content h1 {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+/* Hero paragraph */
+.hero-content p {
+  font-size: 1.25rem;
+  line-height: 1.6;
+  max-width: 90%;
+}
+
+/* Optional: subtle text shadow for better contrast */
+.hero-content h1,
+.hero-content p {
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+/* ===== MOBILE RESPONSIVE ADJUSTMENTS ===== */
 @media (max-width: 768px) {
   .hero {
-    background: url('assets/Intake.jpg') center/cover no-repeat;
-    padding: 80px 15px;
+    background-position: center top;
+    min-height: 70vh;
+    padding: 60px 20px;
+    filter: brightness(1.1) saturate(1.1);
+  }
+
+  .hero-content {
+    text-align: center;
+    max-width: 100%;
+  }
+
+  .hero-content h1 {
+    font-size: 2rem;
+  }
+
+  .hero-content p {
+    font-size: 1rem;
   }
 }
-
 
 
     /* Sections */
