--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
     }
 
     /* Hero */
-/* ===== HERO SECTION WITH WARM, BRIGHT BACKGROUND ===== */
-/* ===== HERO SECTION WITH WARM, BRIGHT BACKGROUND ===== */
+
+/* ===== HERO SECTION WITH PARALLAX EFFECT ===== */
+
 .hero {
   position: relative;
   isolation: isolate;
@@ -118,75 +119,154 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed; /* ✅ Parallax effect */
   color: white;
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   overflow: hidden;
-  padding: 0 5%;
-  filter: brightness(1.15) saturate(1.1);
 }
 
-/* Soft warm overlay */
 .hero::before {
   content: "";
   position: absolute;
   inset: 0;
   background: linear-gradient(
-    rgba(255, 230, 200, 0.25),
-    rgba(255, 240, 220, 0.25)
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
   );
   z-index: 0;
 }
 
-/* Ensure hero text stays above overlay */
-.hero-content {
+.hero .wrap {
   position: relative;
   z-index: 1;
-  max-width: 600px;
+  width: 100%;
+  text-align: left;
+  padding: 0 2rem;
 }
 
-/* Hero heading styles */
-.hero-content h1 {
+.hero .content {
+  max-width: 700px;
+}
+
+.hero .badge {
+  background: var(--accent, #ffc107);
+  color: #222;
+  font-weight: 600;
+  padding: 6px 12px;
+  border-radius: 20px;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.hero h1 {
   font-size: 3rem;
+  font-weight: 700;
   line-height: 1.2;
-  margin-bottom: 1rem;
+  margin-bottom: 20px;
 }
 
-/* Hero paragraph */
-.hero-content p {
-  font-size: 1.25rem;
-  line-height: 1.6;
-  max-width: 90%;
+.hero h1 .highlight {
+  color: var(--accent, #ffcc33);
 }
 
-/* Optional: subtle text shadow for better contrast */
-.hero-content h1,
-.hero-content p {
-  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+.hero .lead {
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+  color: rgba(255, 255, 255, 0.9);
 }
 
-/* ===== MOBILE RESPONSIVE ADJUSTMENTS ===== */
+.hero-cta .btn {
+  display: inline-block;
+  padding: 12px 24px;
+  font-weight: 600;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: background 0.3s ease;
+  margin-right: 12px;
+}
+
+.hero-cta .btn.primary {
+  background: var(--accent, #ffcc33);
+  color: #222;
+}
+
+.hero-cta .btn.primary:hover {
+  background: #ffda5c;
+}
+
+.hero-cta .btn.secondary {
+  border: 2px solid white;
+  color: white;
+}
+
+.hero-cta .btn.secondary:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+/* ===== RESPONSIVE DESIGN ===== */
+
+@media (max-width: 1024px) {
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+  .hero .lead {
+    font-size: 1.1rem;
+  }
+}
+
+/* On smaller screens, disable parallax to prevent jittering */
 @media (max-width: 768px) {
   .hero {
-    background-position: center top;
-    min-height: 70vh;
-    padding: 60px 20px;
-    filter: brightness(1.1) saturate(1.1);
-  }
-
-  .hero-content {
+    min-height: 80vh;
     text-align: center;
-    max-width: 100%;
+    justify-content: center;
+    background-attachment: scroll; /* ✅ Disable parallax on mobile */
   }
 
-  .hero-content h1 {
+  .hero .wrap {
+    padding: 0 1.5rem;
+  }
+
+  .hero .content {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+
+  .hero h1 {
     font-size: 2rem;
+    line-height: 1.3;
   }
 
-  .hero-content p {
+  .hero .lead {
     font-size: 1rem;
+  }
+
+  .hero-cta .btn {
+    display: block;
+    margin: 10px auto;
+    width: fit-content;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero {
+    min-height: 70vh;
+  }
+
+  .hero h1 {
+    font-size: 1.8rem;
+  }
+
+  .hero .lead {
+    font-size: 0.95rem;
+  }
+
+  .hero-cta .btn {
+    padding: 10px 20px;
+    font-size: 0.95rem;
   }
 }
 
