--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     /* Hero */
 
 /* ===== HERO SECTION WITH PARALLAX EFFECT ===== */
+/* ===== HERO SECTION ===== */
 
 .hero {
   position: relative;
@@ -119,13 +120,10 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed; /* ✅ Parallax effect */
   color: white;
-  min-height: 100vh;
+  min-height: 100vh; /* full screen height */
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  overflow: hidden;
 }
 
 .hero::before {
@@ -135,7 +133,7 @@
   background: linear-gradient(
     rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0.5)
-  );
+  ); /* soft overlay for readability */
   z-index: 0;
 }
 
@@ -206,7 +204,7 @@
   background: rgba(255, 255, 255, 0.2);
 }
 
-/* ===== RESPONSIVE DESIGN ===== */
+/* ===== MOBILE RESPONSIVE ADJUSTMENTS ===== */
 
 @media (max-width: 1024px) {
   .hero h1 {
@@ -217,13 +215,11 @@
   }
 }
 
-/* On smaller screens, disable parallax to prevent jittering */
 @media (max-width: 768px) {
   .hero {
     min-height: 80vh;
     text-align: center;
     justify-content: center;
-    background-attachment: scroll; /* ✅ Disable parallax on mobile */
   }
 
   .hero .wrap {
@@ -233,6 +229,10 @@
   .hero .content {
     max-width: 90%;
     margin: 0 auto;
+  }
+
+  .hero .badge {
+    margin-bottom: 16px;
   }
 
   .hero h1 {
@@ -269,6 +269,8 @@
     font-size: 0.95rem;
   }
 }
+
+
 
 
     /* Sections */
