--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  
   <style>
     :root{
       --brand:#FFB703; /* honey gold */
@@ -543,8 +549,13 @@
       </div>
       <div>
         <h4>Follow</h4>
-        <a href="#">Facebook</a><br/>
-        <a href="#">Instagram</a>
+        <div class="social-links">
+          <a href="https://www.facebook.com/profile.php?id=61579072864211" target="_blank">
+            <i class="fab fa-facebook"></i> Facebook
+          </a>
+          <a href="https://www.instagram.com/brightbear_klts" target="_blank">
+            <i class="fab fa-instagram"></i> Instagram
+          </a>
       </div>
     </div>
     <div class="container copyright">© <span id="year"></span> Bright Bear Preschool. All rights reserved.</div>
