--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <h3 style="margin:0 0 8px">School Hours</h3>
         <p style="margin:0 0 12px">Mon–Fri • 8:00am – 6:00pm</p>
         <h3 style="margin:10px 0 8px">Locations</h3>
-        <p style="margin:0">Kuala Lumpur • Setapak</p>
+        <p style="margin:0">39-1, BLK A, KL Traders Square • Setapak</p>
         <div style="height:12px"></div>
         <a class="btn primary" href="#contact">Ask About Availability</a>
       </div>
