--- a/index.html
+++ b/index.html
@@ -528,7 +528,10 @@
           <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
           <div style="height:10px"></div>
           <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" rel="noopener">WhatsApp Us</a>
-          <a class="btn ghost" href="#">Download Prospectus (PDF)</a>
+          <a class="btn ghost" href="assets/OpenDay.JPG" download>
+            Download
+          </a>
+
         </div>
       </div>
     </div>
