--- a/index.html
+++ b/index.html
@@ -524,7 +524,11 @@
         <div class="card">
           <h3 style="margin:0 0 10px">Contact Us</h3>
           <p style="margin:0 0 8px">✉️ brightbear@gmail.com</p>
-          <p style="margin:0 0 8px">📞 +60 17‑600 2267</p>
+          <p style="margin:0 0 8px">
+              📞 <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">
+            +60 17-600 2267
+              </a>
+          </p>
           <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
           <div style="height:10px"></div>
           <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" rel="noopener">WhatsApp Us</a>
