--- a/index.html
+++ b/index.html
@@ -529,6 +529,16 @@
             +60 17-600 2267
               </a>
           </p>
+          
+        <p style="margin:0 0 8px; display:flex; align-items:center; gap:10px; flex-wrap:wrap;">
+          <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">
+              <i class="fas fa-phone"></i> +60 17-600 2267
+          </a>
+          <a href="https://wa.me/60176002267" target="_blank" style="text-decoration:none; color:#25D366;">
+              <i class="fab fa-whatsapp"></i> WhatsApp
+          </a>
+        </p>    
+          
           <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
           <div style="height:10px"></div>
           <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" rel="noopener">WhatsApp Us</a>
