--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
           
           <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
           <div style="height:10px"></div>
-          <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" rel="noopener">WhatsApp Us</a>
+          <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" style="text-decoration:none; color:#25D366;" rel="noopener">WhatsApp </a>
           <a class="btn ghost" href="assets/OpenDay.JPG" download>
             Download
           </a>
