--- a/index.html
+++ b/index.html
@@ -523,23 +523,39 @@
       <div>
         <div class="card">
           <h3 style="margin:0 0 10px">Contact Us</h3>
-          <p style="margin:0 0 8px">✉️ brightbear@gmail.com</p>
+          <p style="margin:0 0 8px">✉️ brightbear.klts@gmail.com</p>
           <p style="margin:0 0 8px">
               📞 <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">
             +60 17-600 2267
               </a>
           </p>
           
-        <p style="margin:0 0 8px; display:flex; align-items:center; gap:10px; flex-wrap:wrap;">
-          <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">
-              <i class="fas fa-phone"></i> +60 17-600 2267
-          </a>
-          <a href="https://wa.me/60176002267" target="_blank" style="text-decoration:none; color:#25D366;">
-              <i class="fab fa-whatsapp"></i> WhatsApp
-          </a>
-        </p>    
+<p style="margin:0; display:flex; align-items:center; gap:8px; flex-wrap:wrap;">
+  <i class="fas fa-map-marker-alt"></i>
+  <span>39-1, Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</span>
+
+  <!-- Waze Button -->
+  <a href="waze://?q=Bright%20Bear%20Preschool%20KL%20Traders%20Square"
+     onclick="window.location='https://waze.com/ul?q=Bright%20Bear%20Preschool%20KL%20Traders%20Square';"
+     target="_blank"
+     style="text-decoration:none; background:#05C3DD; color:white; padding:4px 10px; border-radius:6px;">
+    <i class="fab fa-waze"></i> Waze
+  </a>
+
+  <!-- Google Maps Button -->
+  <a href="https://www.google.com/maps?q=Bright+Bear+Preschool+KL+Traders+Square"
+     target="_blank"
+     style="text-decoration:none; background:#34A853; color:white; padding:4px 10px; border-radius:6px;">
+    <i class="fab fa-google"></i> Maps
+  </a>
+</p>
+
+
+
+
+
+
           
-          <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
           <div style="height:10px"></div>
           <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" style="text-decoration:none; color:#25D366;" rel="noopener">
               <i class="fab fa-whatsapp"></i> WhatsApp
