--- a/index.html
+++ b/index.html
@@ -530,20 +530,18 @@
               </a>
           </p>
           
-<p style="margin:0; display:flex; align-items:center; gap:8px; flex-wrap:wrap;">
-  <i class="fas fa-map-marker-alt"></i>
-  <span>39-1, Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</span>
+      <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
 
   <!-- Waze Button -->
-  <a href="waze://?q=Bright%20Bear%20Preschool%20KL%20Traders%20Square"
-     onclick="window.location='https://waze.com/ul?q=Bright%20Bear%20Preschool%20KL%20Traders%20Square';"
+  <a href="waze://hw2864r4n9&navigate=yes"
+     onclick="window.location='https://waze.com/ul/hw2864r4n9&navigate=yes';"
      target="_blank"
      style="text-decoration:none; background:#05C3DD; color:white; padding:4px 10px; border-radius:6px;">
     <i class="fab fa-waze"></i> Waze
   </a>
 
   <!-- Google Maps Button -->
-  <a href="https://www.google.com/maps?q=Bright+Bear+Preschool+KL+Traders+Square"
+  <a href="https://maps.app.goo.gl/bLcVVLzDHMPERUZ17"
      target="_blank"
      style="text-decoration:none; background:#34A853; color:white; padding:4px 10px; border-radius:6px;">
     <i class="fab fa-google"></i> Maps
