--- a/index.html
+++ b/index.html
@@ -547,19 +547,13 @@
     <i class="fab fa-google"></i> Maps
   </a>
 </p>
-
-
-
-
-
-
           
           <div style="height:10px"></div>
           <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" style="text-decoration:none; color:#25D366;" rel="noopener">
               <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
           <a class="btn ghost" href="assets/OpenDay.JPG" download>
-            Download
+            Download Open Day Flyer
           </a>
 
         </div>
