--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bright Bear Preschool</title>
 
 <!-- Favicon and App Icons -->
-<link rel="icon" href="assets/favicon.ico?v=2" type="image/x-icon">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
