--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 <meta name="theme-color" content="#ffffff">
     
   <meta name="description" content="Bright Bear Preschool — warm, play-based learning with strong foundations for primary school." />
-  
-
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -127,7 +124,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  color: white;
+  color: var(--brand-2);
   min-height: 75vh; /* full screen height */
   display: flex;
   align-items: center;
