--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  color: var(--brand-2);
+  color: white;
   min-height: 75vh; /* full screen height */
   display: flex;
   align-items: center;
@@ -167,6 +167,7 @@
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.2;
+  color: var(--brand-2)
   margin-bottom: 20px;
 }
 
