--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 .hero .lead {
   font-size: 1.2rem;
   margin-bottom: 30px;
-  color: rgba(255, 255, 255, 0.9);
+  color: var(--brand-2)
 }
 
 .hero-cta .btn {
