--- a/index.html
+++ b/index.html
@@ -275,9 +275,6 @@
   }
 }
 
-
-
-
     /* Sections */
     section{padding:64px 0}
     .section-title{font-size:clamp(24px,3.4vw,36px);margin:0 0 10px;color:var(--brand-2)}
@@ -526,13 +523,9 @@
         <div class="card">
           <h3 style="margin:0 0 10px">Contact Us</h3>
           <p style="margin:0 0 8px">✉️ brightbear.klts@gmail.com</p>
-          <p style="margin:0 0 8px">
-              📞 <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">
-            +60 17-600 2267
-              </a>
-          </p>
-          
-      <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
+          <p style="margin:0 0 8px">📞 <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">+60 17-600 2267
+              </a></p>
+          <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p></p>
 
   <!-- Waze Button -->
   <a href="waze://hw2864r4n9&navigate=yes"
