--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
 @media (max-width: 768px) {
   .hero {
+    background-image: url('assets/Intake.jpg');
     min-height: 80vh;
     text-align: center;
     justify-content: center;
