--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 /* Each image */
 .gallery img {
   flex: 0 0 25%; /* 4 visible per row on desktop */
-  height: auto;
+  height: 300px;
   object-fit: cover;
   border-radius: 12px;
   margin-right: 10px;
