--- a/index.html
+++ b/index.html
@@ -122,13 +122,17 @@
   isolation: isolate;
   background-image: url('assets/Intake.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed; /* ✅ adds parallax */
   color: white;
   min-height: 100vh; /* full screen height */
   display: flex;
   align-items: center;
+  justify-content: flex-start;
+  overflow: hidden;
 }
+
 
 .hero::before {
   content: "";
@@ -167,7 +171,7 @@
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.2;
-  color: var(--brand-2)
+  color: var(--brand-2);
   margin-bottom: 20px;
 }
 
@@ -223,6 +227,7 @@
 @media (max-width: 768px) {
   .hero {
     background-image: url('assets/Intake.jpg');
+    background-attachment: scroll; /* prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
     justify-content: center;
